# tum-tum

./: .gitignore  docker-compose.yaml  sql_reqs_for_bd_setup.md
auth-service/: Dockerfile  pyproject.toml
auth-service/migrations/: env.py
auth-service/migrations/versions/: 39ece2a7d1e9_initial_migration.py
auth-service/src/auth_service/: globals.py  main.py
auth-service/src/auth_service/config/: global_exception_handlers.py  redis_conf.py
auth-service/src/auth_service/log/: loggers.py
auth-service/src/auth_service/middlewares/: auth.py
auth-service/src/auth_service/models/: dtos.py  entities.py  kafka_dtos.py
auth-service/src/auth_service/routers/: user_creds_router.py
auth-service/src/auth_service/services/: jwt_token_service.py  kafka_service.py  session_service.py  user_creds_service.py
comment-service/: Dockerfile  pyproject.toml
comment-service/src/comment_service/: exceptions.py  globals.py
comment-service/src/comment_service/config/: db_conf.py
comment-service/src/comment_service/log/: setup.py
common_package/: pyproject.toml
common_package/src/tumtum_common/: exceptions.py
gateway/: Dockerfile  pyproject.toml
gateway/src/gateway/: exceptions.py  globals.py  main.py
gateway/src/gateway/config/: global_exception_handlers.py
gateway/src/gateway/log/: loggers.py  wrappers.py
gateway/src/gateway/routers/: main_router.py
migrations/: pyproject.toml
migrations/migrations/: env.py
migrations/migrations/versions/: 033ae1571af5_add_description_created_at_and_file_.py  1586939d8715_add_subs_in_user_data.py  5c8f38d2a09b_remove_all_previous_versions.py  7a902ce63f8a_add_new_table_videostatus_add_.py  90b93e261e1a_rename_vido_name_video_title.py  b644d3faea8a_replace_association_table_for_subs_with_.py  f0906aa806de_initial_migration.py
migrations/models/: entities.py
user-service/: Dockerfile  pyproject.toml
user-service/src/user_service/: globals.py
video-service/: Dockerfile  pyproject.toml
video-service/src/video_service/: exceptions.py  globals.py  main.py
video-service/src/video_service/config/: db_conf.py
video-service/src/video_service/log/: loggers.py
video-service/src/video_service/middlewares/: setup.py
video-service/src/video_service/models/: dtos.py  entities.py
video-service/src/video_service/routers/: video_router.py
video-service/src/video_service/services/: video_service.py
video-service/src/video_service/utils/: enums.py
(+14 files in other folders)
