[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Максим",email = "maksim_goncharov_2006@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "auth_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
